refactored get all appts for current user (#35)